# log-highlight

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO
src/: config.rs  highlighter.rs  lib.rs  main.rs  rule.rs
